Atualizando doc e Criando Entidade Publication
