# src/main/java/com/example/demo/dto/PostCreateVacancyDTO.java
@@ -1,10 +1,0 @@
-package com.example.demo.dto;
-
-import com.example.demo.enums.PostType;
-import lombok.Getter;
-
-@Getter
-public class PostCreateVacancyDTO {
-    private PostType type;
-    private VacancyCreateDTO vacancyCreateDTO;
-}
