# src/main/java/com/example/demo/dto/PostDataDTO.java
@@ -1,0 +1,16 @@
+package com.example.demo.dto;
+
+import com.fasterxml.jackson.annotation.JsonSubTypes;
+import com.fasterxml.jackson.annotation.JsonTypeInfo;
+
+@JsonTypeInfo(
+        use = JsonTypeInfo.Id.NAME,
+        include = JsonTypeInfo.As.PROPERTY,
+        property = "type"
+)
+@JsonSubTypes({
+        @JsonSubTypes.Type(value = VacancyCreateDTO.class, name = "VACANCY"),
+        @JsonSubTypes.Type(value = PublicationCreateDTO.class, name = "PUBLICATION")
+})
+public abstract class PostDataDTO {
+}
