# src/main/java/com/example/demo/dto/PostResponse.java
@@ -5,21 +5,27 @@ import com.example.demo.entities.Post;
 import com.example.demo.enums.PostType;
 import com.example.demo.enums.VacancyStatus;
 
+import java.util.List;
+
 public record PostResponse (
         Long id,
         PostType type,
-        UserResponse author,
+        List<UserResponse> authors,
         VacancyStatus vacancyStatus,
-        VacancyResponse vacancyResponse
+        VacancyResponse vacancyResponse,
+        PublicationResponse publicationResponse
 
 ){
     public static PostResponse fromEntity(Post post) {
         return new PostResponse(
                 post.getId(),
                 post.getPostType(),
-                UserResponse.fromEntity(post.getUser()),
+                post.getUsers().stream()
+                        .map(UserResponse::fromEntity)
+                        .toList(),
                 post.getVacancyStatus(),
-                VacancyResponse.fromEntity(post.getVacancy())
+                VacancyResponse.fromEntity(post.getVacancy()) != null ? VacancyResponse.fromEntity(post.getVacancy()) : null,
+                PublicationResponse.fromEntity(post.getPublication()) != null ? PublicationResponse.fromEntity(post.getPublication()) : null
         );
     }
 }
