# src/main/java/com/example/demo/dto/PublicationCreateDTO.java
@@ -1,0 +1,9 @@
+package com.example.demo.dto;
+
+import lombok.Getter;
+
+@Getter
+public class PublicationCreateDTO extends PostDataDTO{
+    private String title;
+    private String body;
+}
